# WaveScope

./: .gitignore  LICENSE  NOTES.md  README.md  pyproject.toml  setup.py
docs/: simulator_reference.md
tests/: test_classify.py  test_clock_paths.py  test_clockless.py  test_cortexm.py  test_counter_clock.py  test_epc.py  test_fallthrough.py  test_isr.py  test_loopclosure.py  test_millicode_real.py  test_pipeline.py  test_robustness.py  test_scan.py  test_simcore.py  test_tailcall.py  test_trn.py  test_v0110.py  test_v0150.py  test_v0203.py  test_v0204.py  test_v0205.py  test_v0206.py  test_v0207.py  test_v0208.py  test_v0209.py  test_v0211.py  test_v090.py
wavescope/: __init__.py  callgrind.py  classify.py  cli.py  disasm.py  fsdb.py  profdata.py  profiler.py  scan.py  simcore.py  trn.py  vcd_reader.py  waveform.py
wavescope/isa/: aarch64.json  armv7m.json  riscv.json
